# qevdevkeyboard

./: CMakeLists.txt  README.md  qevdevkeyboard.pro
features/: qevdevkeyboard.prf
src/: qdevicediscovery.h  qdevicediscovery_udev.cpp  qdevicediscovery_udev.h  qevdevkeyboardhandler.cpp  qevdevkeyboardhandler.h  qevdevkeyboardmanager.cpp  qevdevkeyboardmanager.h  qevdevutil.cpp  qevdevutil.h
